2017-03-09  Devin Rousso  <dcrousso+webkit@gmail.com>

        Web Inspector: Add settings for controlling Styles sidebar intelligence
        https://bugs.webkit.org/show_bug.cgi?id=169181

        Reviewed by Timothy Hatcher.

        * Localizations/en.lproj/localizedStrings.js:
        * UserInterface/Base/Setting.js:
        Add three new settings:
         - stylesShowInlineWarnings
         - stylesInsertNewline
         - stylesSelectOnFirstClick

        * UserInterface/Views/CSSStyleDeclarationTextEditor.js:
        (WebInspector.CSSStyleDeclarationTextEditor):
        (WebInspector.CSSStyleDeclarationTextEditor.prototype._handleMouseDown):
        (WebInspector.CSSStyleDeclarationTextEditor.prototype._handleMouseUp):
        (WebInspector.CSSStyleDeclarationTextEditor.prototype._createInlineSwatches.update):
        (WebInspector.CSSStyleDeclarationTextEditor.prototype._createTextMarkerForPropertyIfNeeded):

        * UserInterface/Views/SettingsTabContentView.css:
        (.content-view.settings > .separator): Added.
        (.content-view.settings > .setting-container):
        (.content-view.settings > .setting-container.combined):

        * UserInterface/Views/SettingsTabContentView.js:
        (WebInspector.SettingsTabContentView.prototype.layout.createContainer):
        (WebInspector.SettingsTabContentView.prototype.layout.createSeparator): Added.
        (WebInspector.SettingsTabContentView.prototype.layout):

2017-03-08  Matt Baker  <mattbaker@apple.com>

        Web Inspector: Add DOM breakpoints UI for node/subtree modification events
        https://bugs.webkit.org/show_bug.cgi?id=168101

        Reviewed by Joseph Pecoraro.

        * Localizations/en.lproj/localizedStrings.js:
        New UI strings.

        * UserInterface/Base/Main.js:
        (WebInspector.loaded):
        Add new manager.

        * UserInterface/Controllers/DOMBreakpointTreeController.js: Added.